--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type-check": "vue-tsc --build --force"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.7.3",
     "dayjs": "^1.11.12",
     "element-plus": "^2.7.8",
