--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "axios": "^1.7.3",
     "dayjs": "^1.11.12",
+    "echarts": "^5.5.1",
     "element-plus": "^2.7.8",
     "js-cookie": "^3.0.5",
     "mitt": "^3.0.1",
