--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
   ],
   "compilerOptions": {
       "lib": ["webworker"],
-      "types": ["node","element-plus/global"]
+      "types": ["node","element-plus/global"],
+      "noImplicitAny": false,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false
   }
 }
