--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "echarts": "^5.5.1",
     "element-plus": "^2.7.8",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
